--- a/WorkItemViewExt/WorkItemViewExt.csproj
+++ b/WorkItemViewExt/WorkItemViewExt.csproj
@@ -140,6 +140,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Guids.cs" />
+    <Compile Include="Helpers\ProgressBar.cs" />
     <Compile Include="Helpers\WorkItemHelper.cs" />
     <Compile Include="Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -151,6 +152,7 @@
     <Compile Include="WorkItemRelations\Entities\GraphLink.cs" />
     <Compile Include="WorkItemRelations\Entities\GraphNode.cs" />
     <Compile Include="WorkItemRelations\Entities\GraphPart.cs" />
+    <Compile Include="WorkItemRelations\Entities\LinkTarget.cs" />
     <Compile Include="WorkItemRelations\GraphRender.cs" />
     <Compile Include="WorkItemRelations\GraphSerializer.cs" />
     <Compile Include="WorkItemRelations\WorkItemTraverser.cs" />
