--- a/Timeline/Timeline.csproj
+++ b/Timeline/Timeline.csproj
@@ -67,18 +67,20 @@
     <Compile Include="Controls\Behind\Entities\AggregatedPositions.cs" />
     <Compile Include="Controls\Behind\Entities\RecordComparer.cs" />
     <Compile Include="Controls\Behind\Helpers.cs" />
-    <Compile Include="Controls\Behind\ITimelinePart.cs" />
     <Compile Include="Controls\Behind\TimelineInput.cs" />
     <Compile Include="Controls\Behind\ViewportController.cs" />
     <Compile Include="Controls\Fields\ControlRevisionView.cs" />
     <Compile Include="Controls\Fields\ControlRevisionsView.cs" />
     <Compile Include="Controls\Fields\Converters\BoolToImageConverter.cs" />
     <Compile Include="Controls\Fields\SelectionLinkAdorner.cs" />
+    <Compile Include="Controls\MainRegion\ControlItem.cs" />
     <Compile Include="Controls\MainRegion\ControlItems.cs" />
-    <Compile Include="Controls\MainRegion\ControlPath.cs" />
+    <Compile Include="Controls\MainRegion\Ornament\RecordTransitionAdorner.cs" />
     <Compile Include="Controls\MainRegion\ControlRecord.cs" />
     <Compile Include="Controls\MainRegion\ControlRecords.cs" />
-    <Compile Include="Controls\MainRegion\LinkRender.cs" />
+    <Compile Include="Controls\MainRegion\Ornament\LinkAdorner.cs" />
+    <Compile Include="Controls\MainRegion\Ornament\LinksDecorator.cs" />
+    <Compile Include="Controls\MainRegion\Ornament\StateAdorner.cs" />
     <Compile Include="Controls\ThumbRegion\ControlThumb.cs" />
     <Compile Include="Controls\MainRegion\ControlTitle.cs" />
     <Compile Include="Controls\TimeLine.cs" />
@@ -123,6 +125,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Deleted.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\AttachmentAdd.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\AttachmentRemove.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ChangesetAdd.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ChangesetRemove.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
