--- a/Timeline.Shell/Timeline.Shell.csproj
+++ b/Timeline.Shell/Timeline.Shell.csproj
@@ -63,6 +63,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="DataModel.cs" />
+    <Compile Include="DataService.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
