--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
-/WorkItemViewExt/bin/Debug
-/WorkItemViewExt/obj/Debug
 *.user
 *.suo
+bin/
+obj/
