--- a/WorkItemViewExt/WorkItemViewExt.csproj
+++ b/WorkItemViewExt/WorkItemViewExt.csproj
@@ -52,6 +52,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <TFSVersion>2015</TFSVersion>
+    <VsAssemblyVersion>14.0</VsAssemblyVersion>
     <DeployExtension>False</DeployExtension>
     <CopyVsixExtensionFiles>False</CopyVsixExtensionFiles>
   </PropertyGroup>
@@ -81,6 +82,8 @@
     <Reference Include="Microsoft.VisualStudio.TeamFoundation.VersionControl">
       <HintPath>..\Libs\$(TFSVersion)\Microsoft.VisualStudio.TeamFoundation.VersionControl.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.VisualStudio.GraphDocumentPackage, Version=$(VsAssemblyVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.VisualStudio.GraphModel, Version=$(VsAssemblyVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.VisualStudio.OLE.Interop" />
     <Reference Include="Microsoft.VisualStudio.Shell.Interop" />
     <Reference Include="Microsoft.VisualStudio.Shell.Interop.8.0" />
@@ -110,10 +113,8 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="WindowsBase" />
-    <Reference Include="Microsoft.VisualStudio.GraphDocumentPackage" />
     <Reference Include="Microsoft.VisualStudio.Progression.Interfaces" />
     <Reference Include="Microsoft.VisualStudio.Progression.GraphControl" />
-    <Reference Include="Microsoft.VisualStudio.GraphModel" />
     <Reference Include="Microsoft.VisualStudio.Diagrams.View.Interfaces" />
     <Reference Include="Microsoft.VisualStudio.Diagrams.View" />
   </ItemGroup>
